--- a/src/AiDotNet.csproj
+++ b/src/AiDotNet.csproj
@@ -41,4 +41,8 @@
 		</None>
 	</ItemGroup>
 
+	<ItemGroup>
+	  <PackageReference Include="MathNet.Numerics" Version="5.0.0" />
+	</ItemGroup>
+
 </Project>
