--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,7 +31,7 @@ jobs:
       working-directory: ./tests
 
     - name: Dotnet Test (Debug)
-      run: dotnet dotcover test --dcXML=Configuration.xml
+      run: dotnet dotcover test --dcOutput="AiDotNet.Coverage.xml" --dcReportType="XML"
 
     - name: Dotnet Build (Release)
       run: dotnet build -c Release
