--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -54,7 +54,7 @@ jobs:
     name: Publish SDK Binaries
     runs-on: ubuntu-latest
     needs: build
-    if: github.repository == 'BreadcrumbsAiDotNet' && startsWith(github.ref, 'refs/tags/sdk')
+    if: github.repository == 'ooples/AiDotNet' && startsWith(github.ref, 'refs/tags/sdk')
 
     steps:
     - name: Load SDK Packages
