--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -57,7 +57,7 @@ jobs:
     name: Publish SDK Binaries
     runs-on: ubuntu-latest
     needs: build
-    if: github.repository == 'ooples/AiDotNet' && startsWith(github.ref, 'refs/tags/sdk')
+    if: github.repository == 'ooples/AiDotNet'
 
     steps:
     - name: Load SDK Packages
