--- a/src/AiDotNet.csproj
+++ b/src/AiDotNet.csproj
@@ -41,6 +41,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <PackageReference Include="BenchmarkDotNet" Version="0.13.9" />
 	  <PackageReference Include="MathNet.Numerics" Version="5.0.0" />
 	</ItemGroup>
 
