--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,12 +1,12 @@
 name: 🐞 Bug report
-description: Create a bug report to help us improve .NET SDK for Alpaca Markets API
+description: Create a bug report to help us improve AiDotNet
 title: "[BUG]: "
 labels: [Bug] 
 body:
 - type: markdown
   attributes:
     value: |
-      Thanks for taking the time to fill out this bug report! Please fill the form in English!
+      Thanks for taking the time to fill out this bug report! Please fill out the form in English!
 - type: checkboxes
   attributes:
     label: Is there an existing issue for this?
@@ -17,7 +17,7 @@ body:
 - type: textarea
   attributes:
     label: Current Behavior
-    description: A concise description of exception/error you encountered.
+    description: A concise description of any exceptions or errors you encountered.
     placeholder: |
       When I do <X>, <Y> happens and I see the error message attached below:
       ```...```
@@ -33,7 +33,7 @@ body:
 - type: textarea
   attributes:
     label: Steps To Reproduce
-    description: Add steps to reproduce this behaviour, include console / network logs & screenshots
+    description: Add steps to reproduce this behavior, including console / network logs & screenshots
     render: markdown
   validations:
     required: false
@@ -43,7 +43,7 @@ body:
     description: |
       Enter the Environment Details:
     value: |
-      - SDK Version: 
+      - AiDotNet Nuget Version: 
       - OS (version, bitness): 
       - .NET SDK (version):
       - target process .NET version/bitness:
