--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -2,6 +2,7 @@ name: 🐞 Bug report
 description: Create a bug report to help us improve AiDotNet
 title: "[BUG]: "
 labels: [Bug] 
+assignees: ooples
 body:
 - type: markdown
   attributes:
