More matrix work

--- a/src/AiDotNet.csproj
+++ b/src/AiDotNet.csproj
@@ -40,4 +40,8 @@
 		</None>
 	</ItemGroup>
 
+	<ItemGroup>
+	  <PackageReference Include="System.ValueTuple" Version="4.5.0" />
+	</ItemGroup>
+
 </Project>
