--- a/src/AiDotNet.csproj
+++ b/src/AiDotNet.csproj
@@ -41,6 +41,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 	  <PackageReference Include="System.ValueTuple" Version="4.5.0" />
 	</ItemGroup>
 
