--- a/src/AiDotNet.csproj
+++ b/src/AiDotNet.csproj
@@ -46,4 +46,8 @@
 	  <PackageReference Include="System.ValueTuple" Version="4.5.0" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="TimeSeries\" />
+	</ItemGroup>
+
 </Project>
