Added some new optimizers and made improvements to introduce adaptive learning as well as some other improvements

--- a/src/AiDotNet.csproj
+++ b/src/AiDotNet.csproj
@@ -48,6 +48,7 @@
 
 	<ItemGroup>
 	  <Folder Include="Evaluation\" />
+	  <Folder Include="Caching\" />
 	  <Folder Include="TimeSeries\" />
 	</ItemGroup>
 
