Added some gaussian processes and kernel methods. Added a bunch of new optimization methods

--- a/src/AiDotNet.csproj
+++ b/src/AiDotNet.csproj
@@ -49,6 +49,7 @@
 	<ItemGroup>
 	  <Folder Include="Evaluation\" />
 	  <Folder Include="Caching\" />
+	  <Folder Include="GaussianProcesses\" />
 	  <Folder Include="TimeSeries\" />
 	</ItemGroup>
 
