--- a/src/AiDotNet.csproj
+++ b/src/AiDotNet.csproj
@@ -50,6 +50,7 @@
 	  <Folder Include="Evaluation\" />
 	  <Folder Include="Caching\" />
 	  <Folder Include="GaussianProcesses\" />
+	  <Folder Include="WindowFunctions\" />
 	  <Folder Include="Wavelets\" />
 	  <Folder Include="TimeSeries\" />
 	</ItemGroup>
