Added new time series decomposition methods as well as adding some time series models and adding wavelet decomposition

--- a/src/AiDotNet.csproj
+++ b/src/AiDotNet.csproj
@@ -51,7 +51,7 @@
 	  <Folder Include="Caching\" />
 	  <Folder Include="GaussianProcesses\" />
 	  <Folder Include="WindowFunctions\" />
-	  <Folder Include="Wavelets\" />
+	  <Folder Include="WaveletFunctions\" />
 	</ItemGroup>
 
 </Project>
