Started adding documentation for classes and methods as well as creating new validation and custom exceptions

--- a/src/AiDotNet.csproj
+++ b/src/AiDotNet.csproj
@@ -50,6 +50,8 @@
 	  <Folder Include="Evaluation\" />
 	  <Folder Include="Caching\" />
 	  <Folder Include="GaussianProcesses\" />
+	  <Folder Include="Exceptions\" />
+	  <Folder Include="Validation\" />
 	  <Folder Include="WindowFunctions\" />
 	  <Folder Include="WaveletFunctions\" />
 	</ItemGroup>
