--- a/src/AiDotNet.csproj
+++ b/src/AiDotNet.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
 	  <TargetFrameworks>net8.0;net7.0;net6.0;net462</TargetFrameworks>
 		<ImplicitUsings>enable</ImplicitUsings>
