ci/release: fix test job matrix + indentation; correct Codecov step; fix release triggers, job if, and download artifacts for GitHub Release

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -97,18 +97,20 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Setup .NET 8.0.x
+      - name: Setup .NET ${{ matrix.dotnet }}
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: 8.0.x
+          dotnet-version: ${{ matrix.dotnet }}
 
       - name: Restore
-run: dotnet restore AiDotNet.sln
+        run: dotnet restore AiDotNet.sln
       - name: Run tests with coverage
         run: |
           dotnet test AiDotNet.sln --configuration Release --collect:"XPlat Code Coverage" --results-directory ./TestResults
 
-      - name: Upload coverage to Codecov (only uploads if secret set)\n        uses: codecov/codecov-action@v4
+      - name: Upload coverage to Codecov (only if token set)
+        if: ${{ secrets.CODECOV_TOKEN != '' }}
+        uses: codecov/codecov-action@v4
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           files: |
