--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,7 @@ name: Release (.NET)
 on:
   push:
     branches:
-      - master
+      - merge-dev2-to-master
 
 permissions:
   contents: write
@@ -80,7 +80,7 @@ jobs:
     name: Publish to NuGet
     runs-on: ubuntu-latest
     needs: build-test-pack
-    if: secrets.NUGET_API_KEY != ''
+    if: ${{ secrets.NUGET_API_KEY != '' }}
     steps:
       - name: Download package
         uses: actions/download-artifact@v4
@@ -101,6 +101,12 @@ jobs:
     runs-on: ubuntu-latest
     needs: build-test-pack
     steps:
+      - name: Download package
+        uses: actions/download-artifact@v4
+        with:
+          name: nuget-out-${{ github.sha }}
+          path: out/
+
       - name: Create Release
         uses: softprops/action-gh-release@v2
         with:
