--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -72,7 +72,7 @@ jobs:
         with:
           name: nuget-out-${{ github.sha }}
           path: out/*.nupkg
-          if-no-files-found: ignore
+          if-no-files-found: error
 
   publish-nuget:
     name: Publish to NuGet
