--- a/.github/workflows/commitlint.yml
+++ b/.github/workflows/commitlint.yml
@@ -15,5 +15,6 @@ jobs:
       - name: Lint commits
         uses: wagoid/commitlint-github-action@v6
         with:
-          # An empty configFile parameter relies on commitlint's default configuration discovery.
+          # Use explicit config for clarity; falls back to discovery if missing
+          configFile: .commitlintrc.json
 
