--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -107,6 +107,7 @@ jobs:
           if-no-files-found: error
 
       - name: List downloaded artifacts
+        # Ensure artifacts are present prior to release creation
         run: ls -la out
 
       - name: Create Release
