--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -150,6 +150,8 @@ jobs:
     if: always()
     needs: [lint-and-format, build, build-netfx, test, integration-test]
     steps:
+      - name: Context
+        run: echo "Gating jobs: lint-and-format, build, build-netfx, test, integration-test"
       - name: Verify job outcomes
         run: |
           [ "${{ needs.lint-and-format.result }}" = "success" ] || (echo "Lint/format failed" && exit 1)
