ci: switch to official codecov action per Copilot suggestions (both jobs)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,15 +60,12 @@ jobs:
         run: dotnet test AiDotNet.sln -c Release --no-build --collect:"XPlat Code Coverage" --results-directory ./TestResults
 
       - name: Upload coverage to Codecov
-        run: |
-          if [ -n "${CODECOV_TOKEN}" ]; then
-            echo "Uploading coverage to Codecov..."
-            npx codecov -t "${CODECOV_TOKEN}" -d "./TestResults" || echo "Codecov upload failed"
-          else
-            echo "CODECOV_TOKEN not set; skipping Codecov upload."
-          fi
-        env:
-          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+        uses: codecov/codecov-action@v4
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          files: ./TestResults/**/coverage.cobertura.xml
+          flags: unittests
+          fail_ci_if_error: true
 
       - name: Publish core library (sanity)
         run: |
@@ -111,16 +108,13 @@ jobs:
         run: |
           dotnet test AiDotNet.sln --configuration Release --collect:"XPlat Code Coverage" --results-directory ./TestResults
 
-      - name: Upload coverage to Codecov (only if token set)
-        run: |
-          if [ -n "${CODECOV_TOKEN}" ]; then
-            echo "Uploading coverage to Codecov..."
-            npx codecov -t "${CODECOV_TOKEN}" -f "./TestResults/**/coverage.cobertura.xml" -F unittests || echo "Codecov upload failed"
-          else
-            echo "CODECOV_TOKEN not set; skipping Codecov upload."
-          fi
-        env:
-          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+      - name: Upload coverage to Codecov (unit tests)
+        uses: codecov/codecov-action@v4
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          files: ./TestResults/**/coverage.cobertura.xml
+          flags: unittests
+          fail_ci_if_error: false
 
   integration-test:
     name: Integration Tests
