--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -70,6 +70,7 @@ jobs:
       - name: Upload package artifact
         uses: actions/upload-artifact@v4
         with:
+          # Required for downstream GitHub Release; fail if missing
           name: nuget-out-${{ github.sha }}
           path: out/*.nupkg
           if-no-files-found: error
