ci/release: finalize Copilot suggestions — commitlint comment wording; annotate artifact error handling in release workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -105,6 +105,7 @@ jobs:
         with:
           name: nuget-out-${{ github.sha }}
           path: out/
+          # Release requires artifacts to exist; fail if missing
           if-no-files-found: error
 
       - name: List downloaded artifacts
