ci/release/commitlint: remove trailing blank lines; mark upload artifact required; rely on default commitlint config discovery (comment added)

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -67,7 +67,7 @@ jobs:
             done
           done
 
-      - name: Upload package artifact
+      - name: Upload package artifact (required)
         uses: actions/upload-artifact@v4
         with:
           # Required for downstream GitHub Release; fail if missing
