--- a/.github/workflows/commitlint.yml
+++ b/.github/workflows/commitlint.yml
@@ -1,19 +1,1 @@
-name: Commit Message Lint
-
-on:
-  pull_request:
-  pull_request_target:
-
-jobs:
-  commitlint:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Check out the PR
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-      - name: Lint commits
-        uses: wagoid/commitlint-github-action@v6
-        with:
-          # Uses .commitlintrc.json from repository root
-
+name: Commit Message Linton:  pull_request:  pull_request_target:jobs:  commitlint:    runs-on: ubuntu-latest    steps:      - name: Check out the PR        uses: actions/checkout@v4        with:          # An empty configFile parameter relies on commitlint's default configuration discovery.      - name: Lint commits        uses: wagoid/commitlint-github-action@v6        with:          # Uses .commitlintrc.json from repository root
