ci: migrate from self-hosted to github-hosted runners for security
- replace self-hosted with ubuntu-latest in build.yml, pr-validation.yml, publish.yml, docs.yml
- update quality-gates.yml and copilot-review-gate.yml to run on all branches
- self-hosted runners are not recommended for public repositories due to security risks

--- a/.github/workflows/copilot-review-gate.yml
+++ b/.github/workflows/copilot-review-gate.yml
@@ -2,7 +2,7 @@ name: Copilot Review Gate
 
 on:
   pull_request:
-    branches: [ merge-dev2-to-master ]
+    branches: [ '**' ]
 
 permissions:
   pull-requests: read
