--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -14,7 +14,7 @@ env:
 jobs:
   build-and-test:
     name: Build, Test & Analyze
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     permissions:
       pull-requests: write
       contents: read
@@ -184,7 +184,7 @@ jobs:
 
   codeql:
     name: CodeQL Security Analysis
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     permissions:
       security-events: write
       contents: read
