--- a/.github/workflows/copilot-review-gate.yml
+++ b/.github/workflows/copilot-review-gate.yml
@@ -21,7 +21,7 @@ jobs:
           PR_NUMBER="${{ github.event.pull_request.number }}"
           HEAD=$(gh pr view "$PR_NUMBER" --repo "$REPO" --json headRefOid --jq .headRefOid)
           COUNT=$(gh api repos/$REPO/pulls/$PR_NUMBER/comments --paginate \
-            --jq "[ .[] | select((.user.login|test(\"copilot\|advanced\|security\|bot\";\"i\")) and .commit_id == \"$HEAD\") ] | length")
+            --jq "[ .[] | select((.user.login|test(\"copilot|advanced|security|bot\";\"i\")) and .commit_id == \"$HEAD\") ] | length")
           echo "Unresolved Copilot comments on HEAD: $COUNT"
           if [ "$COUNT" -gt 0 ]; then
             echo "Found $COUNT unresolved Copilot comments on HEAD $HEAD"
