feat(meta): scaffold SEALModel<T> + interfaces and tests, aligned with IFullModel and Tensor/Vector usage for #289

--- a/src/AiDotNet.csproj
+++ b/src/AiDotNet.csproj
@@ -47,12 +47,14 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Folder Include="Caching\" />
-	  <Folder Include="GaussianProcesses\" />
-	  <Folder Include="Exceptions\" />
-	  <Folder Include="Validation\" />
-	  <Folder Include="WindowFunctions\" />
-	  <Folder Include="WaveletFunctions\" />
+		<Folder Include="Caching\" />
+		<Folder Include="GaussianProcesses\" />
+		<Folder Include="Exceptions\" />
+		<Folder Include="Validation\" />
+		<Folder Include="WindowFunctions\" />
+		<Folder Include="WaveletFunctions\" />
+		<Folder Include="Models\Generative\Diffusion\" />
+		<Folder Include="MetaLearning\" />
 	</ItemGroup>
 
 </Project>
