--- a/.github/workflows/copilot-review-gate.yml
+++ b/.github/workflows/copilot-review-gate.yml
@@ -12,18 +12,48 @@ jobs:
   gate:
     runs-on: ubuntu-latest
     steps:
-      - name: Check unresolved Copilot comments on HEAD
+      - name: Check unresolved Copilot review threads
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           set -e
           REPO="${{ github.repository }}"
           PR_NUMBER="${{ github.event.pull_request.number }}"
-          HEAD=$(gh pr view "$PR_NUMBER" --repo "$REPO" --json headRefOid --jq .headRefOid)
-          COUNT=$(gh api repos/$REPO/pulls/$PR_NUMBER/comments --paginate \
-            --jq "[ .[] | select((.user.login|test(\"copilot|advanced|security|bot\";\"i\")) and .commit_id == \"$HEAD\") ] | length")
-          echo "Unresolved Copilot comments on HEAD: $COUNT"
-          if [ "$COUNT" -gt 0 ]; then
-            echo "Found $COUNT unresolved Copilot comments on HEAD $HEAD"
+          
+          # Use GraphQL to check for unresolved review threads from bots
+          QUERY='query($owner: String!, $repo: String!, $pr: Int!) {
+            repository(owner: $owner, name: $repo) {
+              pullRequest(number: $pr) {
+                reviewThreads(first: 100) {
+                  nodes {
+                    isResolved
+                    comments(first: 1) {
+                      nodes {
+                        author {
+                          login
+                        }
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          }'
+          
+          # Extract owner and repo name
+          OWNER=$(echo "$REPO" | cut -d'/' -f1)
+          REPO_NAME=$(echo "$REPO" | cut -d'/' -f2)
+          
+          # Query unresolved threads from bot users
+          UNRESOLVED=$(gh api graphql \
+            -f query="$QUERY" \
+            -f owner="$OWNER" \
+            -f repo="$REPO_NAME" \
+            -F pr="$PR_NUMBER" \
+            --jq '[.data.repository.pullRequest.reviewThreads.nodes[] | select(.isResolved == false and (.comments.nodes[0].author.login | test("copilot|advanced|security|bot"; "i")))] | length')
+          
+          echo "Unresolved bot review threads: $UNRESOLVED"
+          if [ "$UNRESOLVED" -gt 0 ]; then
+            echo "Found $UNRESOLVED unresolved bot review threads"
             exit 1
           fi
