fix: remove struct constraints and exclude temp files from repo
- Remove 'where T : struct' constraints from all RAG generic types (interfaces, base classes, concrete implementations)
- Delete pr-comments.json and rag-analysis-instructions.txt that shouldn't be in repo
- Update .gitignore to prevent similar temp/analysis files from being committed

This aligns with AiDotNet's architecture pattern of using unconstrained generic types with INumericOperations.

--- a/.gitignore
+++ b/.gitignore
@@ -370,3 +370,9 @@ FodyWeavers.xsd
 worktrees/
 # Project-specific Claude Code configuration
 CLAUDE.md
+
+# PR comment analysis and tracking files
+pr-comments.json
+rag-analysis-instructions.txt
+*-comments.json
+*-analysis-instructions.txt
