fix: add InternalsVisibleTo for test and testconsole assemblies
Added InternalsVisibleTo attribute to expose internal members to
AiDotNetTests and AiDotNetTestConsole assemblies. This allows tests
and examples to access internal Model property without making it public.

Addresses build failures where testconsole examples could not access
PredictionModelResult.Model property.

--- a/src/AiDotNet.csproj
+++ b/src/AiDotNet.csproj
@@ -29,6 +29,11 @@
     <TreatWarningsAsErrors>True</TreatWarningsAsErrors>
   </PropertyGroup>
 
+  <ItemGroup>
+    <InternalsVisibleTo Include="AiDotNetTests" />
+    <InternalsVisibleTo Include="AiDotNetTestConsole" />
+  </ItemGroup>
+
 	<ItemGroup>
 		<None Include="Images\Favicon.jpg">
 			<Pack>True</Pack>
