--- a/src/AiDotNet.csproj
+++ b/src/AiDotNet.csproj
@@ -49,8 +49,6 @@
 	  <PackageReference Include="Azure.Search.Documents" Version="11.7.0" />
 	  <PackageReference Include="Elastic.Clients.Elasticsearch" Version="9.2.1" />
 	  <PackageReference Include="Google.Protobuf" Version="3.28.3" />
-	  <PackageReference Include="ILGPU" Version="1.5.1" />
-	  <PackageReference Include="ILGPU.Algorithms" Version="1.5.1" />
 	  <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
 	  <PackageReference Include="Microsoft.Data.Sqlite" Version="8.0.21" />
 	  <PackageReference Include="Microsoft.ML.OnnxRuntime" Version="1.20.1" />
@@ -58,6 +56,12 @@
 	  <PackageReference Include="Pinecone.Client" Version="4.0.2" />
 	  <PackageReference Include="StackExchange.Redis" Version="2.9.32" />
 	  <PackageReference Include="System.ValueTuple" Version="4.6.1" />
+	</ItemGroup>
+
+	<!-- ILGPU packages only for .NET 8.0+ (not compatible with net462) -->
+	<ItemGroup Condition="'$(TargetFramework)' == 'net8.0'">
+	  <PackageReference Include="ILGPU" Version="1.5.1" />
+	  <PackageReference Include="ILGPU.Algorithms" Version="1.5.1" />
 	</ItemGroup>
 
 	<!-- PostgreSQL package only for .NET 8.0+ -->
