chore: add gpu vectorization todo to gitignore for local tracking only

--- a/.gitignore
+++ b/.gitignore
@@ -370,3 +370,6 @@ FodyWeavers.xsd
 worktrees/
 # Project-specific Claude Code configuration
 CLAUDE.md
+
+# Local progress tracking (not for repository)
+GPU_VECTORIZATION_TODO.md
