ci: optimize codeql and codacy workflows for faster execution
CodeQL optimizations:
- Add timeout-minutes: 30 to prevent hanging
- Use security-extended query suite
- Move cache before CodeQL init
- Use --no-restore in build (use cached packages)
- Add category for better organization

Codacy optimizations:
- Limit analysis to src/ directory only (skip tests)
- Add skip-uncommitted-files-check for faster startup
- Use stable @v4 tag instead of @master
- Add continue-on-error for reliability

--- a/.github/workflows/codacy.yml
+++ b/.github/workflows/codacy.yml
@@ -36,6 +36,8 @@ jobs:
           format: sarif
           gh-code-scanning-compat: true
           max-allowed-issues: 2147483647
+          directory: src
+          skip-uncommitted-files-check: true
         continue-on-error: true
 
       - name: Upload SARIF results file
