--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -12,6 +12,7 @@ jobs:
   analyze:
     name: Analyze (csharp)
     runs-on: ubuntu-latest
+    timeout-minutes: 30
     permissions:
       actions: read
       contents: read
@@ -26,11 +27,6 @@ jobs:
       with:
         dotnet-version: '8.0.x'
 
-    - name: Initialize CodeQL
-      uses: github/codeql-action/init@v3
-      with:
-        languages: csharp
-
     - name: Cache NuGet Packages
       uses: actions/cache@v4
       with:
@@ -39,8 +35,16 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-nuget-
 
+    - name: Initialize CodeQL
+      uses: github/codeql-action/init@v3
+      with:
+        languages: csharp
+        queries: security-extended
+
     - name: Dotnet Build
-      run: dotnet build -c Release
+      run: dotnet build -c Release --no-restore
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v3
+      with:
+        category: "/language:csharp"
