fix(ci): fix codeql restore and codacy directory mount errors
CodeQL: Add dotnet restore step before build (--no-restore requires packages)
Codacy: Remove directory parameter (causes invalid mount path error)

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -35,6 +35,9 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-nuget-
 
+    - name: Restore NuGet Packages
+      run: dotnet restore
+
     - name: Initialize CodeQL
       uses: github/codeql-action/init@v3
       with:
