--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,15 +33,10 @@ jobs:
       with:
         dotnet-version: '8.0.x'
 
-    - name: Setup .NET 7.0
+    - name: Setup .NET Framework 4.7.1
       uses: actions/setup-dotnet@v5
       with:
-        dotnet-version: '7.0.x'
-
-    - name: Setup .NET 6.0
-      uses: actions/setup-dotnet@v5
-      with:
-        dotnet-version: '6.0.x'
+        dotnet-version: '4.7.1'
 
     - name: Cache NuGet packages
       uses: actions/cache@v4
